# N0dzCrypt-LSP-Server

./: .gitignore  02_example_file  Cargo.toml  LICENSE.md  README.md  binding.gyp  example-file  go.mod  go.sum  grammar.js  logs.txt  main.go  nodzcript-lsp  output.txt  package-lock.json  package.json  test.html
cache/: analyzer.go  analyzer_test.go  grap_test.go  graph.go  graph_test.go  nodzcript.config.go  queries_test.go  sitter.queries.go  type-finder.go  type-finder_test.go  util.go
cache/querier/: param-query.go  param-query_test.go  query-builder.go  query-builder_test.go  query.go  query_functions.go  query_test.go
cache/types/: string-methods.txt
config/: consts.go  nodzcript.config.go
data/: file.reader.go
doc/: main.md
logging/: logger.go
lsp/: initialize.go  message.go  textdocument-didopen.go  textdocument.go
rpc/: rpc.go  rpc_test.go  types.go
src/: grammar.json  main.rs  node-types.json  parser.c
src/parser/: mod.rs
src/parser/syntax_tree/: mod.rs
src/tokeniser/: mod.rs
test-env/: n0dzcrypt.json  pom.xml
test-env/src/main/resources/: application.yml
test/corpus/: attributes.txt  fragment-insertion.dialect.txt  fragment.dialect.txt  message.dialect.txt  spel.txt  standard-dialect.txt  tags.txt  th.standard_dialect.txt  url-dialect.txt
tree-sitter-thymeleaf/: Cargo.toml  grammar.js
tree-sitter-thymeleaf-th_attribute_value/: :  comment.txt  example-file  grammar.js  ognl.txt  output.txt  package-lock.json  test-file.txt
tree-sitter-thymeleaf-th_attribute_value/src/: grammar.json  node-types.json  parser.c  scanner.c
(+22 files in other folders)
