[package]
name = "thymeleaf-lsp-server"
version = "0.1.0"
edition = "2021"
description = "lsp server for thymeleaf-lsp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = "1.0.197"
serde_json = "1.0.114"
walkdir = "2.4.0"
tree-sitter = "0.20.0"
tree-sitter-html = "0.20.0"
tree-sitter-java = "0.20.2"
log = "0.4.20"
maplit = "1.0.2"
phf = { version = "0.11.2", features = ["macros"] }

[build-dependencies]
cc="*"
